hphp/hack/test/typecheck/reactive/at_most_rx_as_args2.php
<?hh // strict

// ERROR
<<__Rx, __AtMostRxAsArgs>>
function f((function(): int) $s): void {
}
